# free-space-predictor

./: .gitignore  .python-version  README.md  pyproject.toml  requirements.txt  setup.py  train.py  train_model.sh
config/: pedestrians.json
data_generation/: data_generation.ipynb  scene_processor.py  utils.py
data_generation/src/: HalfplaneIntersectionProcessor.cpp
etc/: launch.json
fsp/: train_trajectory_predictor.py
fsp/dynamics/: single_integrator.py  state_delta.py  unicycle.py
fsp/models/: __init__.py  support_predictor.py  trajectory_predictor.py
fsp/modules/: __init__.py  discrete_latent.py  gmm2d.py  mgcvae.py  mgcvae_encoder.py  multihead_attention.py  positional_bias.py  snce.py  transformer_encoder.py
src/criterions/: contrastive.py
src/data_generation/: __init__.py  custom_batch.py  custom_data.py  data_generation.ipynb  scene_processor.py  utils.py
src/dynamics/: single_integrator.py  state_delta.py  unicycle.py
src/models/: support_predictor.py  trajectory_predictor.py
src/modules/: decoder.py  discrete_latent.py  emb2support.py  encoder.py  gmm2d.py  mgcvae.py  model_registrar.py  snce.py  trajectron.py
src/support_pred/src/: HalfplaneIntersectionProcessor.cpp
src/support_pred/tests/: custom_data.ipynb  custom_data.py  support_verification.ipynb
src/traj_pred/: train.py  train_model.sh  trajectory_predictor.py
src/traj_pred/modules/: __init__.py  encoder.py  (+1 more)
src/utils/: __init__.py  annealing.py  argument_parser.py  dataset.py  evaluation.py  model_utils.py  sc_sampling.py
tests/: playground.ipynb  test_models.ipynb
(+18 files in other folders)
